Tractar respostes del negoci dels serveis dins DatosEspecificos amb els seus propis codis de resposta #23
